--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,18 +1,123 @@
-/* components/Footer.module.css */
 .footer {
-    background-color: #f8f8f8;
-    padding: 20px;
-    text-align: center;
-    border-top: 1px solid #ddd;
+    background-color: #2B3A4A;
+    padding: 40px 0;
 }
 
-.footer nav ul {
-    list-style-type: none;
+.footerContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footerColumn {
+    flex: 1 1 200px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.footerColumn p,
+.footerColumn ul {
+    margin: 0;
     padding: 0;
+    list-style: none;
+    line-height: 1.6;
 }
 
-.footer nav ul li {
-    display: inline;
-    margin: 0 15px;
+
+.footerColumn a {
+    color: white;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: block;
 }
+
+.footerColumn li {
+    margin-bottom: 10px;
+}
+
+.footerColumn li a {
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s ease;
+}
+
+.footerColumn a:hover {
+    text-decoration: underline;
+}
+
+
+.footerColumn h3 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.subscribeForm {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+}
+
+.subscribeForm input {
+    padding: 15px;
+    border-radius: 30px 0 0 30px;
+    border: none;
+    flex: 1;
+    font-size: 14px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.subscribeForm button {
+    padding: 15px 20px;
+    border-radius: 0 30px 30px 0;
+    border: none;
+    background-color: #f39c12;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.subscribeForm button::before {
+    content: '>';
+    font-size: 18px;
+    color: white;
+}
+
+
+.downloadButton {
+    background-color: #fec85e;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.messengers img {
+    margin-right: 10px;
+}
+
+
+.paymentMethods img {
+    width: 60px;
+    height: auto;
+}
+
+.paymentMethods {
+    margin-top: 15px;
+    display: flex;
+
+    gap: 8px;
+}
+
 
