--- a/components/Promotion_swiper/Promotion_swiper.module.css
+++ b/components/Promotion_swiper/Promotion_swiper.module.css
@@ -1,8 +1,9 @@
 .container {
-  width: 80%;
+  max-width: 1432px;
   height: 500px;
   margin: 0 auto;
   position: relative;
+  font-family: var(--font-inter);
 }
 
 .mySwiper {
@@ -49,10 +50,11 @@
 }
 
 .slideTitle {
+  font-family: var(--font-inter);
   font-size: 70px;
-  font-weight: 500;
+  font-weight: 700;
   color: var(--white);
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   z-index: 1;
 }
 
@@ -61,7 +63,7 @@
   font-weight: 300;
   max-width: 60%;
   color: var(--white);
-  margin-bottom: 60px;
+  margin-bottom: 70px;
   z-index: 1;
 }
 
