--- a/styles/global.css
+++ b/styles/global.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  font-family: var(--font-roboto);
+  font-family: var(--font-inter);
   color: var(--blue);
   background: var(--white);
 }
