--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #2B3A4A;
+    background-color: #3F4E65;
     padding: 40px 0;
 }
 
@@ -7,17 +7,63 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+    gap: 40px;
 }
+
+
+.subscribeText {
+    font-size: 12px;
+    margin-top: 40px !important;
+    color: white;
+    text-align: left;
+}
+
+
+.workTime {
+    white-space: nowrap;
+}
+
+.orderCall {
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.alwaysOnContact {
+    font-size: 12px;
+    color: white;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.mail {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    color: #FFFFFF;
+    margin-top: 12px !important;
+}
+
 
 .footerColumn {
     flex: 1 1 200px;
     margin-bottom: 20px;
-    color: white;
+}
+
+.footerColumn h3 {
+    color: #FFFFFF;
+    font-size: 18px;
+    margin-bottom: 15px;
+    font-weight: bold;
 }
 
 .footerColumn p,
@@ -26,65 +72,43 @@
     padding: 0;
     list-style: none;
     line-height: 1.6;
+    color: #FFFFFF;
 }
 
-
 .footerColumn a {
-    color: white;
+    color: #FFFFFF;
     text-decoration: none;
     margin-bottom: 10px;
     display: block;
-}
-
-.footerColumn li {
-    margin-bottom: 10px;
-}
-
-.footerColumn li a {
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s ease;
 }
 
 .footerColumn a:hover {
     text-decoration: underline;
 }
 
-
-.footerColumn h3 {
-    margin-bottom: 15px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #FFF;
-}
-
 .subscribeForm {
     display: flex;
     margin-top: 10px;
-    justify-content: center;
+    align-items: center;
 }
 
 .subscribeForm input {
     padding: 15px;
     border-radius: 30px 0 0 30px;
-    border: none;
+    border: 1px solid #C4C4C4;
     flex: 1;
     font-size: 14px;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    color: #333333;
 }
 
 .subscribeForm button {
     padding: 15px 20px;
     border-radius: 0 30px 30px 0;
     border: none;
-    background-color: #f39c12;
+    background-color: #FFCE3E;
     color: white;
     cursor: pointer;
     font-size: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .subscribeForm button::before {
@@ -94,19 +118,33 @@
 }
 
 
+
+
 .downloadButton {
     background-color: #fec85e;
-    color: white;
-    padding: 10px 20px;
     border: none;
     border-radius: 20px;
+    color: #fff;
+    padding: 20px 32px;
+    font-size: 16px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 8px;
     cursor: pointer;
 }
 
-.messengers img {
-    margin-right: 10px;
+.downloadIcon {
+    display: inline-block;
+    vertical-align: middle;
+    color: #fff;
 }
 
+
+.messengers img {
+    padding-top: 8px;
+    margin-right: 10px;
+}
 
 .paymentMethods img {
     width: 60px;
@@ -114,10 +152,13 @@
 }
 
 .paymentMethods {
-    margin-top: 15px;
     display: flex;
-
-    gap: 8px;
+    gap: 10px;
+    margin-top: 15px;
 }
 
+.myDiv {
+    margin: 20px;
+    padding: 10px;
+}
 
