--- a/components/Logo_swiper/Logo_swiper.module.css
+++ b/components/Logo_swiper/Logo_swiper.module.css
@@ -1,87 +1,133 @@
 .container {
-    padding: 0px 0px;
-    text-align: start;
-    max-width: 1366px;
-    margin: 0 auto;
-    font-family: var(--font-inter);
-  }
-  
-  .title {
-    font-size: 36px;
-    font-weight: 500;
-    color: var(--black);
-    margin-bottom: 16px;
-  }
-  
-  .highlight {
-    color: var(--yellow);
-    font-weight: 800;
-  }
-  
-  .subtitle {
-    font-size: 20px;
-    font-weight: 300;
-    color: var(--blue);
-    margin-bottom: 20px;
-    margin-bottom: 24px;
-  }
-  
-  .swiper {
-    padding: 20px 0 60px;
-  }
+  padding: 0;
+  text-align: start;
+  max-width: 1366px;
+  margin: 0 auto 80px;
+  font-family: var(--font-inter);
+}
 
-  .swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.title {
+  font-size: 36px;
+  font-weight: 500;
+  color: var(--black);
+  margin-bottom: 16px;
+}
+
+.highlight {
+  color: var(--yellow);
+  font-weight: 800;
+}
+
+.subtitle {
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--blue);
+  margin-bottom: 24px;
+}
+
+.swiper {
+  padding: 20px 0 60px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  background-color: var(--white);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 77px;
+  width: 120px;
+  padding: 10px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.logoImage {
+  max-height: 77px;
+  max-width: 100%;
+  object-fit: contain;
+  transition: transform 0.3s ease-in;
+}
+
+.card:hover .logoImage {
+  transform: scale(1.1);
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--yellow);
+}
+
+.container :global(.swiper-pagination) {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
+}
+
+.container :global(.swiper-pagination-bullet) {
+  background-color: gray;
+  width: 16px;
+  height: 6px;
+  border-radius: 4px;
+  margin: 0 4px;
+  transition: all 0.3s ease;
+}
+
+.container :global(.swiper-pagination-bullet-active) {
+  background-color: var(--yellow);
+  width: 26px;
+  height: 6px;
+  border-radius: 6px;
+}
+
+@media (max-width: 1280px) {
+  .container {
+    width: 95%;
   }
-  .card {
-    background-color: var(--white);
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 77px;
-    width: 120px; 
-    padding: 10px;
-    box-sizing: border-box; 
-    overflow: hidden; 
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 90%;
   }
-  
-  .logoImage {
-    max-height: 77px;
-    max-width: 100%;
-    object-fit: contain; 
-    transition: transform 0.3s ease-in; 
+  .title {
+    font-size: 34px;
   }
-  
-  .card:hover .logoImage {
-    transform: scale(1.1); 
+  .subtitle {
+    font-size: 18px;
   }
-  
-  .swiper-pagination-bullet {
-    background-color: var(--yellow); 
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 85%;
+    margin: 0 auto 60px;
   }
-  
-  .container :global(.swiper-pagination) {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 12px;
+  .title {
+    font-size: 32px;
   }
-  
-  .container :global(.swiper-pagination-bullet) {
-    background-color: gray;
-    width: 16px;
-    height: 6px;
-    border-radius: 4px;
-    margin: 0 4px;
-    transition: all 0.3s ease;
+  .subtitle {
+    font-size: 18px;
   }
-  
-  .container :global(.swiper-pagination-bullet-active) {
-    background-color: var(--yellow);
-    width: 26px;
-    height: 6px;
-    border-radius: 6px;
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
   }
-  
+  .title {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .highlight {
+    font-weight: 600;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+}
