chore: visually improved the code
табы , отступы , скобочки ...

--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -1,179 +1,171 @@
 .container {
-    position: relative;
-    max-width: 1366px;
-    height: 600px;
-    margin: 0 auto 80px;
-    overflow: hidden;
-    font-family: var(--font-inter);
+  position: relative;
+  margin: 0 auto 80px;
+
+  max-width: 1366px;
+  height: 600px;
+  overflow: hidden;
+
+  font-family: var(--font-inter);
 }
 
 .mapImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin-left: 200px;
-    transform: scale(1.3);
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+  margin-left: 200px;
+  transform: scale(1.3);
 }
 
 .overlay {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    width: 735px;
-    height: 424px;
-    padding: 48px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 8px;
-    backdrop-filter: blur(12px);
+  position: absolute;
+  top: 40px;
+  left: 40px;
+
+  width: 735px;
+  height: 424px;
+  padding: 48px;
+
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 8px;
+  backdrop-filter: blur(12px);
 }
 
 .overlay h2 {
-    font-size: 40px;
-    font-weight: 500;
-    color: var(--blue);
-    line-height: 48px;
-    margin: 10px 0 20px;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 48px;
+  color: var(--blue);
+  margin: 10px 0 20px;
 }
 
 .overlay p {
-    font-size: 20px;
-    font-weight: 300;
-    color: var(--blue);
-    line-height: 24px;
-    margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 24px;
+  color: var(--blue);
+  margin-bottom: 15px;
 }
 
 .contactInfo {
-    display: flex;
-    margin-top: 24px;
+  display: flex;
+  margin-top: 24px;
 }
 
 .iconText {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 40px;
 }
 
 .sale {
-    margin-left: 60px;
+  margin-left: 60px;
 }
 
 .icon {
-    width: 20px;
-    height: 20px;
-    object-fit: contain;
+  width: 20px;
+  height: 20px;
+
+  object-fit: contain;
 }
 
 .iconText h3 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1;
-    margin-bottom: 8px;
-    color: var(--black);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1;
+  margin-bottom: 8px;
+  color: var(--black);
 }
 
 .iconText p {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18.2px;
-    color: var(--blue);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18.2px;
+  color: var(--blue);
 }
 
 @media (max-width: 1280px) {
-    .container {
-      width: 95%;
-    }
-    .mapImage {
-        margin: 180px 0 0 0;
-        transform: scale(1.7);
-    }
+  .container {
+    width: 95%;
+  }
+  .mapImage {
+    margin: 180px 0 0 0;
+    transform: scale(1.7);
+  }
 }
 
 @media (max-width: 1024px) {
-    .container {
-      width: 90%;
-      margin: 0 auto 60px;
-    }
-    .mapImage {
-        transform: scale(1.7);
-    }
-    .overlay {
-        position: absolute;
-        width: 90%;
-        height: auto;
-        top: 20px;
-        left: 50%; /* Смещение от центра */
-        transform: translateX(-50%); /* Центрируем блок */
-        padding: 20px 20px 0;
-        border-radius: 12px;
-    }
+  .container {
+    width: 90%;
+    margin: 0 auto 60px;
   }
-  
-
-  @media (max-width: 768px) {
-    .container {
-      width: 85%;
-      margin: 0 auto 60px;
-    }
+  .mapImage {
+    transform: scale(1.7);
   }
-  
+  .overlay {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 
-  @media (max-width: 480px) {
-    .container {
-      width: 90%;
-      height: 600px;
-      margin: 0 auto 40px;
-    }
-    .mapImage {
-        transform: scale(2);
-    }
-    .overlay {
-        position: absolute;
-        width: 90%;
-        height: auto;
-        top: 20px;
-        left: 50%; /* Смещение от центра */
-        transform: translateX(-50%); /* Центрируем блок */
-        padding: 20px 20px 0;
-        border-radius: 12px;
-    }
-    .icon {
-        display: none;
-    }
-    .overlay h2 {
-        font-size: 30px;
-        font-weight: 500;
-        line-height: 24px;
-        margin: 0px 0 16px;
-    }
-    
-    .overlay p {
-        font-size: 16px;
-        font-weight: 300;
-        line-height: 14px;
-        margin-bottom: 15px;
-    }
-    .iconText {
-        gap: 16px;
-        align-items: flex-start;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 16px;
-    }
-    .iconText h3 {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 18px;
-    }
-    .iconText p {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 18px;
-        
-    }
-    .sale {
-        margin-left: 0px;
-    }
-
+    width: 90%;
+    height: auto;
+    padding: 20px 20px 0;
+    border-radius: 12px;
   }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 85%;
+    margin: 0 auto 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
+    height: 600px;
+    margin: 0 auto 40px;
+  }
+  .mapImage {
+    transform: scale(2);
+  }
+  .icon {
+    display: none;
+  }
+  .overlay h2 {
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 0px 0 16px;
+  }
+  .overlay p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 14px;
+    margin-bottom: 15px;
+  }
+  .iconText {
+    gap: 16px;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+  }
+  .iconText h3 {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .iconText p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .sale {
+    margin-left: 0px;
+  }
+}
