--- a/components/Сategories/Categories.module.css
+++ b/components/Сategories/Categories.module.css
@@ -40,7 +40,6 @@
   padding: 0;
   border-radius: 20px;
   text-align: center;
-  text-decoration: none;
 }
 
 .imageWrapper {
@@ -48,6 +47,7 @@
   border-radius: 20px;
   overflow: hidden;
   background-color: rgba(188, 165, 120, 0.1);
+  transition: background-color 0.3s ease-in-out;
 }
 
 .imageWrapper img {
@@ -59,6 +59,10 @@
   font-size: 16px;
   font-weight: 500;
   color: var(--black);
+}
+
+.imageWrapper:hover {
+  background-color: rgba(188, 165, 120, 0.4);
 }
 
 .imageWrapper:hover img {
