--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,125 +1,102 @@
 .bannerContainer {
-    width: 1920px;
-    height: 796px;
+    top: 170px;
     position: relative;
-    top:170px;
-    left: 1920px;
+    width: 100%;
+    height: 796px;
+    background-image: url('../../public/images/image19.png');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    overflow: hidden;
 }
 
+.overlay {
+    width: 47%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(138, 148, 171, 1) 0%, rgba(138, 148, 171, 0) 100%);
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
+  
 
-
-.rect424, .rect426 {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 662px;
-}
-.rect424 {
-    left: 278px;
-}
-
-.rect426 {
-    left: 528px;
-}
-
-.plus {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top:  670px;
-    left: 290px;
-    font-family: Inter; 
-    font-size: 20px; 
-    font-weight: 700; 
-    line-height: 24.2px; 
-    letter-spacing: 0.3em; 
-    text-align: center;
-    color: white;
-    letter-spacing: 240px; 
-}
-
-
-
-.greatDeals {
-    width: 166px;
-    height: 42px;
-    top: 660px;
-    position: absolute;
-    left: 326px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
+.content {
+    width: 600px;
+    height: 100%;
+    padding: 88px 10px;
     text-align: left;
-    color: white;
+    color: var(--white);
+    z-index: 2;
 }
 
-.DeliveryInfo {
-    width: 178px;
-    height: 42px;
-    position: absolute;
-    top: 660px;
-    left: 576px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Inter;
+.mainTitle {
+    font-size: 70px;
+    line-height: 77px;
+    font-weight: 500;
+    margin-bottom: 48px;
+}
+
+.subTitle {
+    font-size: 30px;
+    line-height: 45px;
+    font-weight: 700;
+    margin-bottom: 68px;
+}
+
+.catalogButton {
+    width: 240px;
+    height: 80px;
+    background-color: var(--yellow);
+    color: white;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 50px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 88px;
+}
+
+.catalogButton:hover {
+    background-color: #e6992b;
+}
+
+.features {
+    width: 80%;
+    display: flex;
+    gap: 20px;
+}
+
+.feature {
+    width: 46%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.featureText {
+    color: var(--white);
     font-size: 14px;
     font-weight: 400;
+}
+
+.highlights {
+    font-size: 14px;
+    font-weight: 700;
     line-height: 21px;
-    text-align: left;
-    color: white;
-}
-.DeliveryInfo strong {
-    font-weight: 700;
-} 
-
-.OptomDelivery {
-    width: 550px;
-    height: 45px;
-    position: absolute;
-    top: 370px;
-    left: 278px;
-    font-family: Inter;
-    font-size: 30px;
-    font-weight: 800;
-    line-height: 45px;
-    text-align: left;
-    color:white;
+    color: var(--white);
 }
 
-.OptomDelivery strong {
-    font-weight: 700;
+.icon {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 39px;
+    min-height: 39px;
+    background-color: var(--yellow);
+    border-radius: 50%;
 }
-
-.TypeOfProducts {
-    width: 570px;
-    height: 230px;
-    position: absolute;
-    top: 98px;
-    left: 272px;
-    font-family: Inter;
-    font-size: 70px;
-    font-weight: 500;
-    line-height: 77px;
-    text-align: left;
-    color:white;
-}
-
-.Img {
-    width: 1920px;
-    height: 796px;
-    background-image: url("../../public/images/image19.png");
-}
-
-.Blur {
-    width: 920px;
-    height: 796px;
-    position: relative;
-    background-image: url("../../public/images/image19.png");
-    background: linear-gradient(89.86deg, #8A94AB 0.13%, rgba(138, 148, 171, 0) 99.89%);
-    backdrop-filter: blur(13px)
-}
-
-
