--- a/styles/global.css
+++ b/styles/global.css
@@ -26,3 +26,16 @@ body {
   color: var(--blue);
   background: var(--white);
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--gray);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue);
+  border-radius: 20px;
+}
