--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -162,3 +162,21 @@
     padding: 10px;
 }
 
+
+.languageButton {
+    padding-top: 12px;
+    background: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+
+.languageText {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+}
+
+
