--- a/components/ProductCard/ProductCard.module.css
+++ b/components/ProductCard/ProductCard.module.css
@@ -1,10 +1,3 @@
-.productsGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  margin: 20px 0;
-}
-
 .productCard {
   background-color: var(--white);
   border: 1px solid var(--gray);
@@ -16,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 
 .productCard:hover {
@@ -35,24 +29,37 @@
 }
 
 .productImage {
+  margin:auto;
   margin-bottom: 10px;
 }
 
 .volume {
-  font-size: 14px;
+  font-size: 12px;
   color: var(--black);
+  margin-bottom: 5px;
 }
 
 .productTitle {
   font-size: 16px;
   color: var(--black);
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .details {
   font-size: 14px;
   color: var(--black);
   margin-bottom: 5px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.priceAndButton {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: auto;
 }
 
 .productPrice {
@@ -62,13 +69,20 @@
 }
 
 .addToCartButton {
-  align-self: flex-end;
-  background-color: var(--yellow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFC85E;
+  gap: 5px;
+  width: 153px;
+  height: 45px;
   border: none;
-  padding: 10px 20px;
+  padding: 10px 19px;
+  opacity: 1;
   cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  color:white;
+  border-radius: 80px;
+  transition: background-color 0.3s ease; 
 }
 
 .addToCartButton:hover {
