--- a/components/ProductCard/ProductCard.module.css
+++ b/components/ProductCard/ProductCard.module.css
@@ -1,13 +1,11 @@
 .productCard {
   background-color: var(--white);
-  border: 1px solid var(--gray);
   box-shadow: 0px 14px 39px -11px rgba(0, 0, 0, 0.06);
-
   border-radius: 10px;
   padding: 15px;
   text-align: left;
   position: relative;
-  transition: transform 0.3s ease;
+  transition: background-color 0.3s ease;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,7 +14,7 @@
 }
 
 .productCard:hover {
-  transform: scale(1.05);
+  background-color: var(--gray);
 }
 
 .popularLabel {
@@ -39,8 +37,12 @@
 }
 
 .volume {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   font-size: 12px;
-  color: var(--black);
+  font-weight: 400;
+  color: var(--blue);
   margin-bottom: 5px;
 }
 .volumeType {
@@ -49,24 +51,28 @@
 
 .productTitle {
   font-size: 16px;
+  font-weight: 500;
   color: var(--black);
   margin-bottom: 15px;
-  line-height: 20px;
+  line-height: 20.8px;
 }
 .productBrand {
   font-size: 16px;
-  font-weight: 900;
-  color: var(--black);
+  font-weight: 800;
 }
 
 .details {
   font-size: 14px;
-  color: var(--black);
+  font-weight: 300;
+  line-height: 21px;
+  color: var(--blue);
   margin-bottom: 5px;
 }
 
 .bold {
-  font-weight: bold;
+  font-weight: 500;
+  line-height: 21px;
+  color: var(--black);
 }
 
 .priceAndButton {
@@ -77,16 +83,17 @@
 }
 
 .productPrice {
-  font-size: 18px;
-  color: var(--blue);
-  font-weight: bold;
+  font-size: 16px;
+  line-height: 20.8px;
+  color: var(--black);
+  font-weight: 800;
 }
 
 .addToCartButton {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #FFC85E;
+  background-color: var(--yellow);
   gap: 5px;
   width: 153px;
   height: 45px;
@@ -94,9 +101,9 @@
   padding: 10px 19px;
   opacity: 1;
   cursor: pointer;
-  color:white;
+  color: white;
   border-radius: 80px;
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
 }
 
 .addToCartButton:hover {
