--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -19,11 +19,12 @@
     backdrop-filter: blur(5px);
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: space-evenly;
   }
   
 
 .content {
+    position: relative;
     width: 600px;
     height: 100%;
     padding: 88px 10px;
@@ -99,4 +100,154 @@
     min-height: 39px;
     background-color: var(--yellow);
     border-radius: 50%;
+}
+
+@media (max-width: 1280px) {
+    .mainTitle { 
+        font-size: 50px;
+    }
+    .subTitle { 
+        font-size: 20px;
+    }
+    .catalogButton {
+        width: 160px;
+        height: 60px;
+        font-size: 0.75rem;
+        margin-bottom: 44px;
+    }
+    .feature { 
+        width: auto;
+    }
+    .featureText {
+        font-size: 10px;
+        
+    }
+    .highlights {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 1024px) {
+    
+}
+@media (max-width: 768px) {
+    .bannerContainer {
+        width: 100%;
+        height: 250px;
+        overflow: visible;
+    }
+    .catalogButton {
+        display: none;
+    }    
+    .overlay {
+        width: 90%;
+        height: 56%;
+        position: relative;
+        left: 5%;
+        top: auto;
+        justify-content: center;
+    }
+    .content {
+        padding: 4% 8%;
+        text-align: center;
+    }
+    .mainTitle {
+        font-size: 24px;
+        line-height: 19.8px;
+        font-weight: 400;
+        position: relative;
+        margin-bottom: 6%;
+        
+    }
+    .subTitle {
+        font-size: 16px;
+        line-height: 15px;
+        font-weight: 300;
+        position: relative;
+    }
+    .features {
+        flex-direction:column;
+        position: relative;
+        top: 48px;
+        left: -12%;
+        width: 100%
+    }
+    .feature { 
+        align-items: auto;
+    }
+    .icon {
+        font-size: 10px;
+        min-width: 18px;
+        min-height: 18px;
+    }
+    .featureText {
+        color: rgba(63, 78, 101, 1);
+        text-align:justify;
+        font-size: 10px;
+        white-space: nowrap;
+    }
+}
+
+
+@media (max-width: 480px) {
+    .bannerContainer {
+        top: 50%;
+        width: 100%;
+        height: 350px;
+        background-image: url('../../public/images/image19.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        overflow: visible;
+    }
+    .overlay {
+        width: 90%;
+        height: 30%;
+        position: relative;
+        left: 5%;
+        top: auto;
+        justify-content: center;
+    }
+    .content {
+        padding: 8% 12%;
+        text-align: center;
+    }
+    .mainTitle {
+        font-size: 20px;
+        line-height: 19.8px;
+        font-weight: 400;
+        position: relative;
+        margin-bottom: 6%;
+        
+    }
+    .subTitle {
+        font-size: 12px;
+        line-height: 15px;
+        font-weight: 300;
+        position: relative;
+    }
+    .catalogButton {
+        display: none;
+    }
+    .features {
+        flex-direction:column;
+        position: relative;
+        top: -15px;
+        left: -12%;
+        width: 100%
+    }
+    .feature { 
+        align-items: auto;
+    }
+    .icon {
+        font-size: 10px;
+        min-width: 18px;
+        min-height: 18px;
+    }
+    .featureText {
+        color: rgba(63, 78, 101, 1);
+        text-align:justify;
+        font-size: 10px;
+        white-space: nowrap;
+    }
+    
 }
