--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,253 +1,216 @@
 .bannerContainer {
-    top: 170px;
-    position: relative;
-    width: 100%;
-    height: 796px;
-    background-image: url('../../public/images/image19.png');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 796px;
+  background-image: url('/images/Banner/image19.png');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  overflow: hidden;
 }
 
 .overlay {
-    width: 47%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(138, 148, 171, 1) 0%, rgba(138, 148, 171, 0) 100%);
-    backdrop-filter: blur(5px);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-  
+  width: 47%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(138, 148, 171, 1) 0%,
+    rgba(138, 148, 171, 0) 100%
+  );
+  backdrop-filter: blur(5px);
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
 
 .content {
-    position: relative;
-    width: 600px;
-    height: 100%;
-    padding: 88px 10px;
-    text-align: left;
-    color: var(--white);
-    z-index: 2;
+  position: relative;
+  width: 600px;
+  height: 100%;
+  padding: 88px 10px;
+  text-align: left;
+  color: var(--white);
+  z-index: 2;
 }
 
 .mainTitle {
-    font-size: 70px;
-    line-height: 77px;
-    font-weight: 500;
-    margin-bottom: 48px;
+  font-size: 70px;
+  line-height: 77px;
+  font-weight: 500;
+  margin-bottom: 48px;
 }
 
 .subTitle {
-    font-size: 30px;
-    line-height: 45px;
-    font-weight: 700;
-    margin-bottom: 68px;
+  font-size: 30px;
+  line-height: 45px;
+  font-weight: 700;
+  margin-bottom: 68px;
 }
 
 .catalogButton {
-    width: 240px;
-    height: 80px;
-    background-color: var(--yellow);
-    color: white;
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 50px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-bottom: 88px;
+  width: 240px;
+  height: 80px;
+  background-color: var(--yellow);
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 50px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 88px;
 }
 
 .catalogButton:hover {
-    background-color: #e6992b;
+  background-color: #ffb753;
 }
 
 .features {
-    width: 80%;
-    display: flex;
-    gap: 20px;
+  width: 80%;
+  display: flex;
+  gap: 20px;
 }
 
 .feature {
-    width: 46%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  width: 46%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .featureText {
-    color: var(--white);
-    font-size: 14px;
-    font-weight: 400;
+  color: var(--white);
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .highlights {
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 21px;
-    color: var(--white);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+  color: var(--white);
 }
 
 .icon {
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 39px;
-    min-height: 39px;
-    background-color: var(--yellow);
-    border-radius: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 39px;
+  min-height: 39px;
+  background-color: var(--yellow);
+  border-radius: 50%;
 }
 
 @media (max-width: 1280px) {
-    .mainTitle { 
-        font-size: 50px;
-    }
-    .subTitle { 
-        font-size: 20px;
-    }
-    .catalogButton {
-        width: 160px;
-        height: 60px;
-        font-size: 0.75rem;
-        margin-bottom: 44px;
-    }
-    .feature { 
-        width: auto;
-    }
-    .featureText {
-        font-size: 10px;
-        
-    }
-    .highlights {
-        font-size: 10px;
-    }
+  .mainTitle {
+    font-size: 50px;
+  }
+  .subTitle {
+    font-size: 20px;
+  }
+  .catalogButton {
+    width: 160px;
+    height: 60px;
+    font-size: 0.75rem;
+    margin-bottom: 44px;
+  }
+  .features {
+    width: 100%;
+  }
+  .featureText {
+    font-size: 10px;
+  }
+  .highlights {
+    font-size: 10px;
+  }
+  .content {
+    text-align: end;
+  }
+  .overlay {
+    align-items: end;
+    justify-content: end;
+  }
 }
 
 @media (max-width: 1024px) {
-    
 }
 @media (max-width: 768px) {
-    .bannerContainer {
-        width: 100%;
-        height: 250px;
-        overflow: visible;
-    }
-    .catalogButton {
-        display: none;
-    }    
-    .overlay {
-        width: 90%;
-        height: 56%;
-        position: relative;
-        left: 5%;
-        top: auto;
-        justify-content: center;
-    }
-    .content {
-        padding: 4% 8%;
-        text-align: center;
-    }
-    .mainTitle {
-        font-size: 24px;
-        line-height: 19.8px;
-        font-weight: 400;
-        position: relative;
-        margin-bottom: 6%;
-        
-    }
-    .subTitle {
-        font-size: 16px;
-        line-height: 15px;
-        font-weight: 300;
-        position: relative;
-    }
-    .features {
-        flex-direction:column;
-        position: relative;
-        top: 48px;
-        left: -12%;
-        width: 100%
-    }
-    .feature { 
-        align-items: auto;
-    }
-    .icon {
-        font-size: 10px;
-        min-width: 18px;
-        min-height: 18px;
-    }
-    .featureText {
-        color: rgba(63, 78, 101, 1);
-        text-align:justify;
-        font-size: 10px;
-        white-space: nowrap;
-    }
+  .bannerContainer {
+    width: 100%;
+    height: 250px;
+    overflow: visible;
+  }
+  .catalogButton {
+    display: none;
+  }
+  .overlay {
+    width: 90%;
+    height: 56%;
+    position: relative;
+    left: 5%;
+    top: auto;
+    justify-content: center;
+  }
+  .content {
+    padding: 4% 8%;
+    text-align: center;
+  }
+  .mainTitle {
+    font-size: 24px;
+    line-height: 19.8px;
+    font-weight: 400;
+    position: relative;
+    margin-bottom: 6%;
+  }
+  .subTitle {
+    font-size: 16px;
+    line-height: 15px;
+    font-weight: 300;
+    position: relative;
+  }
+  .features {
+    flex-direction: column;
+    position: relative;
+    top: 48px;
+    left: -12%;
+    width: 100%;
+  }
+  .feature {
+    align-items: auto;
+  }
+  .icon {
+    font-size: 10px;
+    min-width: 18px;
+    min-height: 18px;
+  }
+  .featureText {
+    color: var(--blue);
+    text-align: justify;
+    font-size: 10px;
+    white-space: nowrap;
+  }
 }
 
-
 @media (max-width: 480px) {
-    .bannerContainer {
-        top: 50%;
-        width: 100%;
-        height: 350px;
-        background-image: url('../../public/images/image19.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        overflow: visible;
-    }
-    .overlay {
-        width: 90%;
-        height: 30%;
-        position: relative;
-        left: 5%;
-        top: auto;
-        justify-content: center;
-    }
-    .content {
-        padding: 8% 12%;
-        text-align: center;
-    }
-    .mainTitle {
-        font-size: 20px;
-        line-height: 19.8px;
-        font-weight: 400;
-        position: relative;
-        margin-bottom: 6%;
-        
-    }
-    .subTitle {
-        font-size: 12px;
-        line-height: 15px;
-        font-weight: 300;
-        position: relative;
-    }
-    .catalogButton {
-        display: none;
-    }
-    .features {
-        flex-direction:column;
-        position: relative;
-        top: -15px;
-        left: -12%;
-        width: 100%
-    }
-    .feature { 
-        align-items: auto;
-    }
-    .icon {
-        font-size: 10px;
-        min-width: 18px;
-        min-height: 18px;
-    }
-    .featureText {
-        color: rgba(63, 78, 101, 1);
-        text-align:justify;
-        font-size: 10px;
-        white-space: nowrap;
-    }
-    
+  .mainTitle {
+    font-size: 20px;
+    line-height: 19.8px;
+    font-weight: 400;
+  }
+  .subTitle {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .catalogButton {
+    display: none;
+  }
+  .icon {
+    font-size: 10px;
+  }
+  .featureText {
+    font-size: 10px;
+  }
 }
