style: fixing problems related to adaptivity
-Добавлен свайпер для карточек товаров ( при ширине экрана <768px)
-переделан свайпер у раздела с акциями
-настроенны отступы у баннера
-все кнопки имеют одинаковый ховер

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -9,7 +9,7 @@
   font-family: var(--font-inter);
 }
 .button:hover {
-  background-color: rgb(255, 190, 59);
+  background-color: var(--yellow-hover);
 }
 .buttonImage {
   margin-left: 10px;
