--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -51,21 +51,23 @@
 }
 
 .catalogButton {
-  width: 240px;
-  height: 80px;
+  width: 300px;
+  height: 95px;
   background-color: var(--yellow);
   color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 50px;
-  font-size: 1rem;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-bottom: 88px;
 }
 
 .catalogButton:hover {
-  background-color: #ffb753;
+  background-color: var(--yellow-hover);
 }
 
 .features {
@@ -75,7 +77,7 @@
 }
 
 .feature {
-  width: 46%;
+  width: 47%;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -85,6 +87,7 @@
   color: var(--white);
   font-size: 14px;
   font-weight: 400;
+  line-height: 21px;
 }
 
 .highlights {
@@ -159,7 +162,7 @@
     justify-content: center;
   }
   .content {
-    padding: 4% 8%;
+    padding: 36px 10px;
     text-align: center;
   }
   .mainTitle {
@@ -167,7 +170,7 @@
     line-height: 19.8px;
     font-weight: 400;
     position: relative;
-    margin-bottom: 6%;
+    margin-bottom: 20px;
   }
   .subTitle {
     font-size: 16px;
@@ -177,14 +180,12 @@
   }
   .features {
     flex-direction: column;
-    position: relative;
-    top: 48px;
-    left: -12%;
+    position: absolute;
+    top: 210px;
     width: 100%;
+    left: 0;
   }
-  .feature {
-    align-items: auto;
-  }
+
   .icon {
     font-size: 10px;
     min-width: 18px;
@@ -195,6 +196,10 @@
     text-align: justify;
     font-size: 10px;
     white-space: nowrap;
+  }
+
+  .highlights {
+    color: var(--blue);
   }
 }
 
@@ -216,5 +221,8 @@
   }
   .featureText {
     font-size: 10px;
+  }
+  .overlay {
+    width: 90%;
   }
 }
